removes .scss file names from partial file paths.

--- a/source/sass/inside_embedded_styles.scss
+++ b/source/sass/inside_embedded_styles.scss
@@ -1,10 +1,10 @@
-@charset "UTF-8";
-@import "bourbon/bourbon";
-@import "partials/mixins";
-@import "partials/variables";
+@charset 'UTF-8';
+@import 'bourbon/bourbon';
+@import 'partials/mixins';
+@import 'partials/variables';
 
-@import "partials/common";
-@import "partials/text_styles_preload";
-//@import "partials/site_header_preload";
-@import "partials/inside_page_preload";
+@import 'partials/common';
+@import 'partials/text_styles_preload';
+@import 'partials/site_header_preload';
+@import 'partials/inside_page_preload.scss';
 
