--- a/source/sass/index_embeded_styles.scss
+++ b/source/sass/index_embeded_styles.scss
@@ -1,11 +1,9 @@
-@charset "UTF-8";
-@import "bourbon/bourbon";
-@import "partials/mixins";
-@import "partials/variables";
+@charset 'UTF-8';
+@import 'bourbon/bourbon';
+@import 'partials/mixins';
+@import 'partials/variables';
 
-@import "partials/text_styles_preload";
-@import "partials/common";
-@import "partials/site_header_preload";
-@import "partials/index_page_preload";
-	
-	
+@import 'partials/text_styles_preload';
+@import 'partials/common';
+@import 'partials/site_header_preload';
+@import 'partials/index_page_preload';
