removes scroll progress meter from index page header.

--- a/source/templates/mt_secondary_header.html
+++ b/source/templates/mt_secondary_header.html
@@ -16,7 +16,7 @@
 	</ul>
 
 	</div>
- <div class="scroll-progress-wrapper">
+<!-- <div class="scroll-progress-wrapper">
 		<div id="scroll-progress" class="scroll-progress"></div>	
-	</div>
+	</div> -->
 </nav>
