--- a/source/sass/partials/_site_header_preload.scss
+++ b/source/sass/partials/_site_header_preload.scss
@@ -137,7 +137,7 @@
 	top:0;
 	z-index:100;
 	padding:rem(15) rem(30) 0;
-background: linear-gradient(to bottom, rgba(102,102,102,0.55) 0%,rgba(153,153,153,0.3) 46%,rgba(0,0,0,0) 100%);
+//background: linear-gradient(to bottom, rgba(102,102,102,0.55) 0%,rgba(153,153,153,0.3) 46%,rgba(0,0,0,0) 100%);
 	@media screen and (max-width:em(750)) {
 		height:rem(60);
 		padding:rem(10) rem(20);
@@ -146,7 +146,7 @@ background: linear-gradient(to bottom, rgba(102,102,102,0.55) 0%,rgba(153,153,15
 		height:rem(60);
 		overflow:hidden;
 		padding:rem(10) 0 0;
-	//	transition: height 200ms cubic-bezier(0.175, 0.885, 0.365, 1.420);	
+		transition: height 200ms cubic-bezier(0.175, 0.885, 0.365, 1.420);	
 		}
 		.secondary-header-nameplate	{
 			color:white;			
