Fixes broken no script font links.

--- a/source/templates/mt_css_links.html
+++ b/source/templates/mt_css_links.html
@@ -1,4 +1,4 @@
 <script src="<mt:BlogURL>scripts/css_lazy_load.js" async></script>
 <noscript>
-  <link rel="stylesheet" type="text/css" href="<$mt:BlogArchiveURL$>css/styles6.css">
+  <link rel="stylesheet" type="text/css" href="<$mt:BlogArchiveURL$>css/styles.css">
 </noscript>
