Removes lazy load from image tags. (for now)

--- a/source/templates/mt_front_page_teaser.html
+++ b/source/templates/mt_front_page_teaser.html
@@ -21,7 +21,7 @@
 				<source srcset="<$mt:BlogArchiveURL$>siteart/large_<mt:EntryDataImage_one>.jpg" media="(min-width:550px)">
 				<source srcset="<$mt:BlogArchiveURL$>siteart/med_<mt:EntryDataImage_one>.jpg" media="(min-width:350px)">
 				<source srcset="<$mt:BlogArchiveURL$>siteart/xsmall_<mt:EntryDataImage_one>.jpg">
-				<img src="<$mt:BlogArchiveURL$>siteart/med_<mt:EntryDataImage_one>.jpg" class="lazyload" alt="">
+				<img src="<$mt:BlogArchiveURL$>siteart/med_<mt:EntryDataImage_one>.jpg" alt="">
 			</picture>	  
 		</figure>				
 		</a>
