creates an icon partial

--- a/source/sass/styles.scss
+++ b/source/sass/styles.scss
@@ -11,5 +11,6 @@
 @import 'partials/about';
 @import 'partials/blog';
 @import 'partials/search_results';
+@import 'partials/icons'; 
 @import 'partials/404_page'; 
 @import 'partials/no_js'; 
