fixes linting problem

--- a/source/sass/inside_embedded_styles.scss
+++ b/source/sass/inside_embedded_styles.scss
@@ -6,5 +6,5 @@
 @import 'partials/common';
 @import 'partials/text_styles_preload';
 @import 'partials/site_header_preload';
-@import 'partials/inside_page_preload.scss';
+@import 'partials/inside_page_preload';
 
