--- a/source/sass/partials/_blog.scss
+++ b/source/sass/partials/_blog.scss
@@ -43,7 +43,7 @@
 	font-size:em(14);
 	}	
 
-.blog-entry-text {
+.blog-entry-text, .blog-entry-text-index {
 	position:relative;
 		@media screen and (max-width:em(728)) { padding:0 20px; }	
 		@media screen and (max-width:em(500)) { padding:0 10px; }	
@@ -120,7 +120,34 @@ h3 {
 	color:$dark;
 	margin:0 0 5px;	
 	}	
-}	
+}
+.blog-entry-text-index {
+	max-height:rem(350);
+	overflow:hidden;
+	position:relative;
+	padding:0;
+		@media screen and (max-width:em(450)) {
+		max-height:rem(500);
+		}
+	&:before {
+		width:100%;
+		height:150px;
+		display:block;
+		position:absolute;
+		content:' ';
+		bottom:0;
+		left:0;
+		background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 31%,rgba(255,255,255,1) 100%);
+	}		
+}
+.blog-more-button {
+	position:absolute;
+	bottom:0;
+	left:0;
+	right:0;
+	margin:auto;
+}
+
 .blog-entry-block{
 	a { color:$body;
 		&:hover {
@@ -476,5 +503,6 @@ code
 			background-color:$aqua;
 			left:0;
 			width:0%;
+			transition:width .2s cubic-bezier(.31,.45,.45,1.33);
 		}
 }
