Updates styles for revamped up arrow button.

--- a/source/sass/partials/_footer.scss
+++ b/source/sass/partials/_footer.scss
@@ -138,8 +138,7 @@
 			transition:background-color .2s;
 		}	
 	}	
-	.scroll-up-icon {width:rem(10);height:rem(10);}
-	.up-arrow{fill:white;}
+	.scroll-up-icon {width:rem(10);height:rem(10);fill:white;}
 
 .scroll-to-top-inactive {
 	opacity:0;
