adds font cal and weight to generic H tags.

--- a/source/sass/partials/_text_styles.scss
+++ b/source/sass/partials/_text_styles.scss
@@ -17,6 +17,11 @@ p {
 	line-height:150%;
 	margin:0 0 em(13.5) 0;
 }
+h1, h2, h3, h4
+	{
+	font-family:$sans;
+	font-weight:700;	
+	}
 ul {
 	padding:0px;	
 		li { list-style-type:none;}	
