--- a/source/templates/mt_blog_module.html
+++ b/source/templates/mt_blog_module.html
@@ -7,14 +7,20 @@
 <$mt:Include module="blog_image"$>
 </a>
 </mt:If>
-<h3 class="blog-headline"><a href="<mt:entrypermalink>" rel="next"><mt:EntryTitle smarty_pants="1"></a></h3>
+<h3 class="blog-headline"><a href="<mt:entrypermalink>" rel="canonical"><mt:EntryTitle smarty_pants="1"></a></h3>
 <p class="blog-entry-date"><mt:EntryDate format="%A, %b %e, %Y"></p>
-<div class="blog-entry-text">
-<p>
-<mt:EntryBody smarty_pants="1" words="75"> &#133; <a href="<mt:entrypermalink>" rel="next" class="teaser-module-abstract-link">More</a>
-</p>
+<div class="blog-entry-text-index">
+<mt:EntryBody smarty_pants="1">
+	<a href="<mt:entrypermalink>" rel="canonical" class="button blog-more-button">Continue reading	
+		<span aria-hidden="true">
+			<svg class="button-icon">
+			  <use xlink:href="#arrow-right" />
+			</svg>
+		</span>	
+	</a>	
 </div>
 </mt:entries>
+<$mt:Include module="blog_entry_teasers"$>
 
 <mtElse>
 <mt:Entries category="blog entry">
