--- a/source/templates/mt_single_blog_entry.html
+++ b/source/templates/mt_single_blog_entry.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html class="no-js">
 <head>
-<title>Front page</title>
+<title>David Putney | <mt:EntryTitle></title>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"> 
 <meta charset="utf-8">
+<link rel="shortcut icon" href="http://www.davidputney.com/favicon.ico" />
 
-<mt:EntryBody words="20" smarty_pants="0" setvar="og_description"$>
+<mt:EntryBody smarty_pants="0" words="300" setvar="og_description"$>
 <mt:EntryTitle smarty_pants="0" setvar="og_title"$>
-<mt:EntryPermalink smarty_pants="0" setvar="og_link"$>
+<mt:EntryPermalink smarty_pants="0" setvar="og_url"$>
 <$mt:Var name="og_content" value="article"$>
+<mt:If tag="EntryDataImage_one">
+
+<mt:EntryDataImage_one smarty_pants="0" setvar="og_image"$>
+<$mt:Var name="og_image" value="http://www.davidputney.com/siteart/large_" prepend="1"$>
+<$mt:Var name="og_image" value=".jpg" append="1"$>
+<mt:Else>
+<$mt:Var name="og_image" value="http://www.davidputney.com/siteart/sm_hero_blog.jpg"$>
+</mt:If>
+
 <$mt:Include module="meta_tags"$>
  
 <style rel="stylesheet" type="text/css" media="all">
 <$mt:Include module="embedded_CSS_inside"$>
 </style> 
 
-<link href="<mt:BlogURL>css/styles.css" rel="stylesheet" type="text/css" media="all" /> 
-<!--[if lt IE 9]>
-	<link rel="stylesheet" type="text/css" href="css/ie_styles.css" />
-<![endif]-->
-
-<!--[if lte IE 8]>
-	<link rel="stylesheet" type="text/css" href="css/ie_styles.css" />
-<![endif]-->
-
-
 <$mt:Include module="fonts_links"$>
-
+<$mt:Include module="css_links"$>
 </head>
 
 <body data-pagetype="blog-entry">
-<span class="hidden" aria-hidden="true">
-<svg xmlns="http://www.w3.org/2000/svg" version="1.1"></svg> 
-</span>
+<div class="svg-import" aria-hidden="true">
+	<$mt:Include module="svg_icons"$>
+</div>	
 
 <!-- @import "modules/head/skip_links.html" --> 
 
@@ -42,14 +42,14 @@
 
 <main id="main">
 
-<div class="blog-container blog-single-entry">
+<div id="blog-container" class="blog-container blog-single-entry">
 	
 <article class="blog-entry">
+ 
 <mt:If tag="EntryDataImage_one">
-<a href="<mt:entrypermalink>" rel="next">
 <$mt:Include module="blog_image"$>
-</a>
-</mt:If>    
+</mt:If>
+
 	<h1 class="blog-headline"><mt:EntryTitle smarty_pants="1"></h1>
 
     <p class="blog-entry-date"><mt:EntryDate format="%A, %b %e, %Y"></p>
@@ -63,19 +63,19 @@
 </aside>
 </mt:If>
 <mt:EntryMore smarty_pants="1">
-
-<footer>
+</div>
+<footer class="blog-entry-footer">
+<mt:If tag="EntryDataFootnotes">
+<$mt:Include module="footnotes"$>
+<$mt:Include module="footnote_return"$>  
+</mt:If>
 <$mt:Include module="blog_sig"$>
 	<ul class="blog-tags">
 <mt:EntryTags>
     <li><a href="<$mt:TagSearchLink$>" rel="tag"><mt:TagName></a></li>
 </mt:EntryTags>
 	</ul>
-</footer>
-    </div>
 
-<aside>
- 
 <ul class="blog-related-links-list">
 
 <mt:EntryNext by_category="1">
@@ -85,7 +85,7 @@
 <li><span class="blog-related-links-label">Previous </span><a href="<$mt:EntryPermalink$>" rel="prev"><mt:entrytitle smarty_pants="1"></a></li>
 </mt:EntryPrevious>
 </ul>
-</aside>
+</footer>
 </article>
  
 
@@ -93,10 +93,9 @@
 </div>
 
 </main>
-<$mt:Include module="footer"$>
-	<div class="svg-import" aria-hidden="true">
-		<$mt:Include module="svg_icons"$>
-	</div>
+    <$mt:Include module="footer"$>
 </body>
+
 <$mt:Include module="js_links"$>
+<$mt:Include module="google_analytics"$>
 </html>
