--- a/source/templates/mt_footer.html
+++ b/source/templates/mt_footer.html
@@ -29,7 +29,7 @@
 	<li class="facebook-link"> 
 	<span class="hidden">my facebook account</span>
 	<span class="svg-container" aria-hidden="true" id="facebook-link">
-	<span id="twitter-link" class="svg-container" aria-hidden="true">
+	<span id="facebook-link" class="svg-container" aria-hidden="true">
 		<svg class="footer-icon">
       <use xlink:href="#facebook" />
     </svg>
@@ -40,7 +40,7 @@
 	<span class="hidden">my github account</span>
 	<a href="https://github.com/putneydm" target="_blank" >
 	<span class="svg-container" aria-hidden="true">
-		<span id="twitter-link" class="svg-container" aria-hidden="true">
+		<span id="github-link" class="svg-container" aria-hidden="true">
 		<svg class="footer-icon">
       <use xlink:href="#github" />
     </svg>
