--- a/source/sass/partials/_variables.scss
+++ b/source/sass/partials/_variables.scss
@@ -8,6 +8,7 @@ $body: #444;
 $aqua:#2989a2;
 $dark_aqua:darken(#4094aa, 20%);
 $light_aqua:#9db9c1;
+$x-light-aqua:#c9e1e8;
 $haze:#F6F5F1;
 
 $dark:#666;
