Adds hidden style to SVG container so it doesn't interfere with hero art on page load.

--- a/source/templates/mt_category_entry_listing.html
+++ b/source/templates/mt_category_entry_listing.html
@@ -33,7 +33,7 @@
 </style>
 </head>
 <body data-pagetype="portfolio-page">
-	<div class="svg-import" aria-hidden="true">
+	<div class="svg-import hidden" aria-hidden="true">
 	<$mt:Include module="svg_icons"$>
 	</div>	
 	<ul class="hidden">
