--- a/source/templates/mt_index.html
+++ b/source/templates/mt_index.html
@@ -23,10 +23,7 @@
 <$mt:Include module="fonts_links"$>
 </head>
 <body id="index-page" class="one" data-pagetype="index-page">
-	<span class="hidden" aria-hidden="true">
-		<svg xmlns="http://www.w3.org/2000/svg" version="1.1"></svg> 
-	</span>
-	<div class="svg-import" aria-hidden="true">
+	<div class="svg-import hidden" aria-hidden="true">
 	<$mt:Include module="svg_icons"$>
 	</div>	
 	<ul class="hidden">
