--- a/source/templates/mt_page.html
+++ b/source/templates/mt_page.html
@@ -78,7 +78,7 @@ portfolio</mt:if>
 
 </head>
 <body data-pagetype="section-page">
-	<div class="svg-import" aria-hidden="true">
+	<div class="svg-import hidden" aria-hidden="true">
 		<$mt:Include module="svg_icons"$>
 	</div>
 <ul class="hidden">
