--- a/source/templates/mt_single_blog_entry.html
+++ b/source/templates/mt_single_blog_entry.html
@@ -30,7 +30,7 @@
 </head>
 
 <body data-pagetype="blog-entry">
-<div class="svg-import" aria-hidden="true">
+<div class="svg-import hidden" aria-hidden="true">
 	<$mt:Include module="svg_icons"$>
 </div>	
 
