Adds arrow icon to teaser markup.

--- a/source/templates/mt_blog_entry_teasers_index.html
+++ b/source/templates/mt_blog_entry_teasers_index.html
@@ -8,7 +8,11 @@
 		</mt:If>
 		</figure>
 		<mt:If tag="EntryDataPromo_blurb">
-			<h4 class="blog-teaser-hed"><mt:EntryDataPromo_blurb  smarty_pants="1"></h4>
+			<h4 class="blog-teaser-hed"><mt:EntryDataPromo_blurb  smarty_pants="1">
+			<svg class="teaser-arrow-icon">
+				<use xlink:href="#arrow-right" />
+			</svg>
+		</h4> 	
 		</mt:If>
 		</a>
 	</li>
@@ -22,7 +26,11 @@
 		</mt:If>
 		</figure>
 		<mt:If tag="EntryDataPromo_blurb">
-			<h4 class="blog-teaser-hed"><mt:EntryDataPromo_blurb  smarty_pants="1"></h4>
+			<h4 class="blog-teaser-hed"><mt:EntryDataPromo_blurb  smarty_pants="1">
+				<svg class="teaser-arrow-icon">
+				  <use xlink:href="#arrow-right" />
+				</svg>
+			</h4>	
 		</mt:If>
 		</a>
 	</li>
