--- a/source/templates/mt_category_entry_listing.html
+++ b/source/templates/mt_category_entry_listing.html
@@ -111,11 +111,11 @@
 		<mt:If tag="EntryDataType" eq="header">
 		<mt:If tag="EntryDataLive_site">
 			<a href="<mt:EntryDataLive_site>" class="button" rel="nofollow">View the live site	   
-			<span  aria-hidden="true">
-				<svg width="20" height="10">
-					<use x="8" y="3" xlink:href="#arrow" />
-				</svg>
-			</span>		
+				<span aria-hidden="true">
+					<svg class="button-icon">
+		  				<use xlink:href="#arrow-right" />
+					</svg>
+				</span>	
 			</a>
 		</mt:If>
 		</mt:If>
