--- a/source/sass/partials/_index.scss
+++ b/source/sass/partials/_index.scss
@@ -163,23 +163,26 @@
 	display:flex;
 	margin:rem(60) 0 0;
 	flex-wrap: wrap;
+	flex-direction:row;
 }
 
 .blog-teaser-item {
-	width:calc(25% - 5px);
+	width:calc(20% - 5px);
 	margin-right:5px;
 	padding:rem(10) rem(10) 0 rem(10);	
 	border-radius:2px;
-		&:nth-child(1) {order:3; border:1px solid $aqua !important}
+	flex-grow:1;
+		&:nth-child(1) {order:2; border:1px solid $aqua !important; ; flex-grow:2.2; 	width:calc(22% - 5px);}
 		&:nth-child(2) {order:1}
-		&:nth-child(3) {order:2}
+		&:nth-child(3) {order:3}
 		&:nth-child(4) {order:4}
 	@media screen and (max-width:rem(650)) {
 		padding:rem(5) rem(5) 0 rem(5);
 	}	
 	@media screen and (max-width:rem(550)) {
 		width:calc(50% - 5px);
-		flex-grow: 2;
+		&:nth-child(1) {width:calc(50% - 5px);order:3}
+		&:nth-child(3) {order:2}
 	}
 	a {
 	background:none;
@@ -203,4 +206,5 @@
 	height:rem(10);
 	vertical-align:middle;
 	fill:$light-aqua;
+}
 }
