fixes site hero image.

--- a/source/templates/mt_category_entry_listing.html
+++ b/source/templates/mt_category_entry_listing.html
@@ -41,7 +41,7 @@
 		<li><a href="#main">Skip to content</a></li>
 	</ul>
 	 <$mt:Include module="inside_page_header_visible"$>
-	<header id="hero-image" class="hero-art-portfolio hero-art-portfolio-special backgound-set hero-overlay filter-me" data-image = "<$mt:Var name="hero_art"$>">
+	<header id="hero-image" class="hero-art-portfolio backgound-set hero-overlay filter-me" data-image = "<$mt:Var name="hero_art"$>">
 	</header>
 	<div class="hero-art-portfolio-overlay"></div>
 <main id="main">
