--- a/source/sass/partials/_blog.scss
+++ b/source/sass/partials/_blog.scss
@@ -14,51 +14,51 @@
 	background-size: 60% 2px;
 	background-origin: padding-box;
 	background-position: center 100%;
-	background-repeat: no-repeat;	
+	background-repeat: no-repeat;
 	}
-	
+
 .blog-single-entry{
 	margin-top:60px;
-	
-				@media screen and (max-width:em(750)) 
+
+				@media screen and (max-width:em(750))
 				{
 				margin-top:20px;
 				}
-	
-.blog-entry	{ background-image:none;}	
-}	
+
+.blog-entry	{ background-image:none;}
+}
 .blog-headline {
 	font-size:em(24);
 	font-family:$sans;
 	margin:0 10px 15px;
-	text-align:center;	
-	@media screen and (max-width:em(500)) {font-size:em(22);}	
+	text-align:center;
+	@media screen and (max-width:em(500)) {font-size:em(22);}
 	a { color:$body; background-image:none;
-		&:hover{ color:$aqua;}			
-	}	
-}	
+		&:hover{ color:$aqua;}
+	}
+}
 .blog-entry-date {
 	text-align:center;
 	font-style:italic;
 	font-size:em(14);
-	}	
+	}
 
 .blog-entry-text, .blog-entry-text-index {
 	position:relative;
-		@media screen and (max-width:em(728)) { padding:0 20px; }	
-		@media screen and (max-width:em(500)) { padding:0 10px; }	
-		p { font-size:em(15);		
+		@media screen and (max-width:em(728)) { padding:0 20px; }
+		@media screen and (max-width:em(500)) { padding:0 10px; }
+		p { font-size:em(15);
 			@media screen and (max-width:em(500)) { font-size:em(14); }
-		}	
-		p:first-child:first-letter { 
-		float: left; 
-		color: $med; 
-		font-size: em(46); 
-		line-height: 80%; 
-		padding: 5px 8px 0 3px; 
-		font-family: $sans; 		
+		}
+		p:first-child:first-letter {
+		float: left;
+		color: $med;
+		font-size: em(46);
+		line-height: 80%;
+		padding: 5px 8px 0 3px;
+		font-family: $sans;
 			@media screen and (max-width:em(500)) { font-size: em(53); }
-		}		
+		}
 ul { margin:15px 20px rem(30);
 	li {
 	margin:0 0 8px 0px;
@@ -77,9 +77,9 @@ ul { margin:15px 20px rem(30);
 			margin:10px 4px 0 0;
 			border-radius:50%;
 			vertical-align:sub;
-			}		
-	}	
-}	
+			}
+	}
+}
 blockquote {
 	font-size:em(15);
 	line-height:130%;
@@ -87,43 +87,44 @@ blockquote {
 	margin-left:15px;
 	padding-left:10px;
 	color:$dark;
-	
-		
-			@media screen and (max-width:em(500)) 
+
+
+			@media screen and (max-width:em(500))
 			{
 			font-size:em(14);
 			}
-			
-			
-		p:first-child:first-letter 
-		{ 
-		float: none; 
-		color: inherit; 
-		font-size: inherit; 
-		line-height: inherit; 
-		padding: 0; 
-		font-family:inherit; 
-		
-			@media screen and (max-width:em(500)) 
+
+
+		p:first-child:first-letter
+		{
+		float: none;
+		color: inherit;
+		font-size: inherit;
+		line-height: inherit;
+		padding: 0;
+		font-family:inherit;
+
+			@media screen and (max-width:em(500))
 			{
-			font-size: inherit; 
+			font-size: inherit;
 			}
-		}		
+		}
 }
 .hidden-x
 {
 display:none !important;
-}		
+}
 h3 {
 	font-family:$sans;
 	font-size:em(18);
 	color:$dark;
-	margin:0 0 5px;	
-	}	
+	margin:0 0 5px;
+	}
 }
 .blog-entry-text-index {
 	max-height:rem(350);
-	overflow:hidden;
+	overflow-y:hidden;
+	overflow-x: visible;
 	position:relative;
 	padding:0;
 		@media screen and (max-width:em(450)) {
@@ -138,11 +139,11 @@ h3 {
 		bottom:0;
 		left:0;
 		background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 31%,rgba(255,255,255,1) 100%);
-	}		
+	}
 }
 .blog-more-button {
 	position:absolute;
-	bottom:0;
+	bottom:40px;
 	left:0;
 	right:0;
 	margin:auto;
@@ -151,13 +152,13 @@ h3 {
 .blog-entry-block{
 	a { color:$body;
 		&:hover {
-		color:$aqua;			
-		}			
+		color:$aqua;
+		}
 	}
 }
 .blog-entry-footer {
-	@media screen and (max-width:em(728)) { padding:0 20px; }	
-	@media screen and (max-width:em(500)) { padding:0 10px; }	
+	@media screen and (max-width:em(728)) { padding:0 20px; }
+	@media screen and (max-width:em(500)) { padding:0 10px; }
 }
 .footnote-wrapper {
 	width:100%;
@@ -178,7 +179,7 @@ h3 {
 	left:0;
 	right:0;
 	top:-45px;
-	transition-delay:1.5s;	
+	transition-delay:1.5s;
 	transition:top .7s ease-in;
 	cursor:default;
 		@media screen and (max-width:em(750)) {
@@ -198,13 +199,13 @@ h3 {
 		}
 
 }
-.blog-tags {			
-		@media screen and (max-width:em(730)) {padding:0 20px;}	
-		@media screen and (max-width:em(500)) 
+.blog-tags {
+		@media screen and (max-width:em(730)) {padding:0 20px;}
+		@media screen and (max-width:em(500))
 		{
 		padding:0 10px;
 		}
-	
+
 		li
 		{
 		font-family:$sans;
@@ -213,20 +214,20 @@ h3 {
 		display:inline-block;
 		font-weight:700;
 		margin:0 0 0px 0;
-		
-		
+
+
 			a
 			{
 			color:$aqua;
-			
+
 				&:hover
 				{
 				color:$dark_aqua;
 				}
-			
+
 			}
 
-		
+
 			&:before
 			{
 			content:' | ';
@@ -234,31 +235,31 @@ h3 {
 			color:$med;
 			margin:0 5px 0 0;
 			}
-		
+
 			&:nth-child(1)
 			{
-			
+
 			&:before
 			{
 			content:'';
 			display:none;
 			}
 			}
-		
+
 		}
-	}	
+	}
 
 .blog-related-links-list
 	{
 	padding:20px 0 0 0;
-	
+
 	li
 	{
 	font-family:$sans;
 	text-align:center;
 	line-height:150%;
 	padding:0 0 10px 0;
-	font-size:em(14);	
+	font-size:em(14);
 		a
 		{
 		color:$aqua;
@@ -266,19 +267,19 @@ h3 {
 			{
 			color:$dark_aqua;
 			}
-		
+
 		}
-	
+
 	}
 
 	}
-	
+
 .blog-related-links-label
 	{
 	color:$med;
 	}
-	
-	
+
+
 .blog-pullquote
 	{
 	@include spanner_too (3, 700, 0, 1);
@@ -286,19 +287,19 @@ h3 {
 	float:right;
 	border-bottom:3px solid $aqua;
 	padding:0 0 8px 0;
-	
-	
-	@media screen and (max-width:em(700)) 
+
+
+	@media screen and (max-width:em(700))
 	{
 	@include spanner_too (3, 700, 0, 1.5);
 	}
-	
-	@media screen and (max-width:em(500)) 
+
+	@media screen and (max-width:em(500))
 	{
-	@include spanner_too (3, 700, 0, 3);	
+	@include spanner_too (3, 700, 0, 3);
 	margin:0 0 30px 0;
 	}
-	
+
 	&:after
 	{
 	content:' \201C \20 \201D ';
@@ -312,9 +313,9 @@ h3 {
 	height:14px;
 	padding:3px 0 0 0;
 	color:$aqua;
-	
+
 	}
-	
+
 	q
 	{
 	font-size:em(18);
@@ -322,17 +323,17 @@ h3 {
 	font-family:$sans;
 	line-height:160%;
 	quotes: "“" "”" "‘" "’";
-	
-	@media screen and (max-width:em(550)) 
+
+	@media screen and (max-width:em(550))
 	{
 	font-size:em(16);
 	}
-	
-	
+
+
 	}
-	
+
 	}
-		
+
 .content-nav
 	{
 	text-align:center;
@@ -341,13 +342,13 @@ h3 {
 		display:inline-block;
 		font-family:$sans;
 		font-size:em(14);
-		
-				@media screen and (max-width:em(400)) 
+
+				@media screen and (max-width:em(400))
 				{
 				display:block;
 				margin:0 0 12px 0;
 				}
-		
+
 		&:after
 			{
 			content:' | ';
@@ -356,20 +357,20 @@ h3 {
 			margin:0 8px;
 			font-family:$serif;
 			}
-			
+
 		&:nth-child(3)
 		{
 		&:after
 			{
 			content:'';
 			}
-		
+
 		}
-		
+
 		}
-	
+
 	}
-	
+
 .blog-image
 	{
 	width:100%;
@@ -378,15 +379,15 @@ h3 {
 	margin:0 auto 30px;
 	position:relative;
 
-	
+
 	img
 	{
-	width:100%;	
+	width:100%;
 	}
-	
-	
+
+
 	}
-	
+
 code
 	{
 	padding:20px;
@@ -399,8 +400,8 @@ code
 	overflow-y: hidden;
 	position:relative;
 	}
-	
-	
+
+
 .blog-signiture
 	{
 	width:100%;
@@ -408,14 +409,14 @@ code
 	padding:10px 0 0 0;
 	border-top:1px solid $light;
 
-	
-				@media screen and (max-width:em(750)) 
+
+				@media screen and (max-width:em(750))
 				{
 				padding:10px 15px;
 				}
-	
+
 	}
-	
+
 .blog-mugshot
 	{
 	width:em(60);
@@ -424,57 +425,57 @@ code
 	float:left;
 	margin:0 15px 0 0;
 	overflow:hidden;
-	
-	
-				@media screen and (max-width:em(600)) 
+
+
+				@media screen and (max-width:em(600))
 				{
 				width:em(40);
 				height:em(40);
 				}
-				
-				
+
+
 				img
 				{
 				width:100%;
 				}
-				
+
 	}
-	
+
 .blog-signiture-text
 	{
 	font-size:em(14);
 	color:$med;
 	font-style:italic;
 	}
-	
-	
-.embed-container { 
-	position: relative; 
+
+
+.embed-container {
+	position: relative;
 	padding-bottom: 56.25%;
 	margin:em(20) auto;
-	height: 0; 
-	overflow: hidden; 
-	max-width: 100% !important; 
+	height: 0;
+	overflow: hidden;
+	max-width: 100% !important;
 	width:80%;
-	
-		@media screen and (max-width:em(450)) 
+
+		@media screen and (max-width:em(450))
 		{
 		width:90%;
-		}	
-	} 
+		}
+	}
 
-.embed-container iframe, .embed-container object, .embed-container embed { 
-	position: absolute; 
-	top: 0; 
-	left: 0; 
-	width: 100%; 
-	height: 100%; 
+.embed-container iframe, .embed-container object, .embed-container embed {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 	}
 .blog-embed-image	{
 	display:block;
 	width:100%;
 	margin:rem(30) 0;
-	
+
 	.full-width {
 		width:100%;
 		max-width:rem(650);
@@ -496,7 +497,7 @@ code
 	left:0;
 	right:0;
 	height:2px;
-	
+
 		.scroll-progress {
 			position:absolute;
 			height:2px;
