--- a/source/sass/partials/_footer.scss
+++ b/source/sass/partials/_footer.scss
@@ -1,8 +1,9 @@
 .site-footer {
 	height:330px;
 	width:100%;
-	background-color:#f6f5f1;
+	//background-color:#f6f5f1;
 	display:block;
+//	 box-shadow: 0 0 40px 15px rgba($med, .4);
 	}
 .site-footer-inactive {
 	opacity:0;
@@ -11,7 +12,7 @@
 	opacity:1;
 	transition:opacity .3s ease-in;
 	transition-delay: .5s;
-	}			
+	}
 .footer-links {
 	width:100%;
 	text-align:center;
@@ -21,7 +22,7 @@
 	width:rem(55);
 //	height:rem(55);
 	display:inline-block;
-	margin:0 rem(12) 0;
+	margin:0 rem(20) 0;
 	position:relative;
 		a {
 		display:block;
@@ -32,9 +33,9 @@
 		height:55px;
 		font-size:em(18);
 		color:$aqua;
-		transition:background-color .2s ease-in;	
+		transition:background-color .2s ease-in;
 		background-image:none;
-		box-shadow:-1px -1px 1px rgba($med, .1);	
+		box-shadow:0px 0px 30px 15px rgba($med, .3);
 			.footer-icon {
 				width:rem(20);
 				height:rem(20);
@@ -43,18 +44,18 @@
 			}
 			&:hover {
 			background-color:$aqua;
-			color:white;		
+			color:white;
 			.footer-icon {fill:white}
-		}		
+		}
 	}
-	@media screen and (max-width:em(350)) { margin:40px 5px 0;		}
+	@media screen and (max-width:em(350)) { margin:40px 10px 0;		}
 }
 	.mail-link {font-size:em(16);}
 }
 
 //.mail-icon {fill:red;}
 
-.site-footer-inactive {	
+.site-footer-inactive {
 	.mail-link {
 		opacity:0;
 		transform: scale(.1,.1);
@@ -62,7 +63,7 @@
 	.twitter-link {
 		opacity:0;
 		transform: scale(.1,.1);
-	}	
+	}
 	.facebook-link {
 		opacity:0;
 		transform: scale(.1,.1);
@@ -70,10 +71,10 @@
 	.github-link {
 		opacity:0;
 		transform: scale(.1,.1);
-	}	
-}	
+	}
+}
 
-.site-footer-active {	
+.site-footer-active {
 	.mail-link {
 		opacity:1;
 		transition:opacity 0 .5s ease-in;
@@ -89,10 +90,10 @@
 		transition-duration: .4s;
 		transition-delay: .7s;
 		transition-timing-function: cubic-bezier(.91,-0.01,.29,1.84);
-	}	
+	}
 	.facebook-link {
 		opacity:1;
-		transition:opacity 0 .9s ease-in;	
+		transition:opacity 0 .9s ease-in;
 		transform: scale(1,1);
 		transition-duration: .4s;
 		transition-delay: .9s;
@@ -100,12 +101,12 @@
 	}
 	.github-link {
 		opacity:1;
-		transition:opacity 0 1.1s ease-in;	
+		transition:opacity 0 1.1s ease-in;
 		transform: scale(1,1);
 		transition-duration: .4s;
 		transition-delay: 1.1s;
 		transition-timing-function: cubic-bezier(.91,-0.01,.29,1.84);
-	}		
+	}
 }
 
 @keyframes linksBounce {
@@ -113,7 +114,7 @@
     50%  {top:-20px;height:55px}
     85%  {top:15px;height:10px}
     100% {top:0;height:55px; scale: 1;}
-}	
+}
 .scroll-to-top
 	{
 	position:fixed;
@@ -130,26 +131,26 @@
 	display:none;
 	background-image:none;
 	z-index:1;
-	@media screen and (max-width:rem(900)) {display:block;}		
-		&:hover { 
+	@media screen and (max-width:rem(900)) {display:block;}
+		&:hover {
 			color:white;
 			background-image:none;
 			background-color:$dark-aqua;
 			transition:background-color .2s;
-		}	
-	}	
+		}
+	}
 	.scroll-up-icon {width:rem(10);height:rem(10);fill:white;}
 
 .scroll-to-top-inactive {
 	opacity:0;
 	transition:opacity .2s ease-in;
-}	
+}
 .scroll-to-top-active
 	{
 	opacity:.9;
-	transition:opacity .2s ease-in;	
-	}	
-.footer-tagline	
+	transition:opacity .2s ease-in;
+	}
+.footer-tagline
 	{
 	color:$med;
 	font-size:em(11);
@@ -157,17 +158,17 @@
 	margin:0 0 5px 0;
 	padding:0;
 	}
-	
-	
-.svg-import	
+
+
+.svg-import
 	{
 	height:0;
 	width:0;
-	overflow:hidden;	
+	overflow:hidden;
 	}
-	
-	
-.footer-navigation-menu	
+
+
+.footer-navigation-menu
 	{
 	width:100%;
 	text-align:center;
@@ -179,16 +180,16 @@
 	background-size: 60% 2px;
 	background-origin: padding-box;
 	background-position: center 100%;
-	background-repeat: no-repeat;	
+	background-repeat: no-repeat;
 	padding:0 0 25px;
-	
-				@media screen and (max-width:em(420)) 
+
+				@media screen and (max-width:em(420))
 				{
 				margin:0px auto 20px;
 				}
-	
-	
-	
+
+
+
 	li
 		{
 		display:inline-block;
@@ -197,12 +198,12 @@
 		margin:40px 0 0;
 		text-transform:capitalize;
 		font-weight:700;
-		
-				@media screen and (max-width:em(450)) 
+
+				@media screen and (max-width:em(450))
 				{
 				font-size:em(16);
 				}
-		
+
 			&:after
 			{
 			content:' | ';
@@ -210,14 +211,14 @@
 			margin:0 15px;
 			color:$light;
 			letter-spacing: -.2em;
-			
-				@media screen and (max-width:em(420)) 
+
+				@media screen and (max-width:em(420))
 				{
 				margin:0 5px;
 				}
-			
+
 			}
-			
+
 			&:nth-child(4)
 			{
 
@@ -226,23 +227,23 @@
 				content:'';
 				margin:0px;
 				}
-			
+
 			}
-			
-			@media screen and (max-width:em(420)) 
+
+			@media screen and (max-width:em(420))
 			{
 			margin:20px 0 0;
 			font-size:em(16);
 			}
-		
-		
+
+
 		a {
 		color:$med;
 		background:none;
-		text-shadow:none;	
+		text-shadow:none;
 			&:hover {
 			color:$aqua;
-			}	
+			}
 		}
 	}
 
