--- a/source/sass/partials/_text_styles.scss
+++ b/source/sass/partials/_text_styles.scss
@@ -121,26 +121,26 @@ ol li::before {
 	display:block;
 	width:100%;
 	max-width:500px;
-	background-color:$aqua;
-	color:white;
+	background-color:white;
+	color:$aqua;
 	font-family:$sans;
 	font-weight:700;
 	font-size:em(13);
 	padding:30px 0;
 	height:75px;
 	text-align:center;
-	border-radius:2px;
+	border-radius:4px;
 	margin:0 auto 60px;
 	letter-spacing:.06em;
 	transition:color .5s ease-in, background-color .5s ease-in;
 	background-image:none;
 	text-shadow:none;
+	box-shadow: 0 0 40px 15px rgba($med, .3);
 	@media screen and (max-width:em(520)) {width:96%;}
 		&:hover{
-			background-color:$dark_aqua;
+			background-color:$aqua;
 			color:white;background-image:none;
-			animation: buttonHover 1.5s infinite cubic-bezier(.49,.49,.65,1);			
-		}	
+		}
 }
 @keyframes buttonHover {
     0%   {background-color:$dark_aqua;}
