--- a/source/templates/mt_page.html
+++ b/source/templates/mt_page.html
@@ -8,7 +8,7 @@ portfolio</mt:if>
 <mt:If tag="PageDataCategory" eq="Projects">
 <$mt:Var name="og_url" value="www.davidputney.com/archive/projects.html"$>
 </mt:if></title>
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"> 
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <meta charset="utf-8">
 <link rel="shortcut icon" href="http://www.davidputney.com/favicon.ico" />
 
@@ -59,7 +59,7 @@ portfolio</mt:if>
 <mt:else>
 <$mt:Include module="embedded_CSS_inside"$>
 </mt:if>
-</style> 
+</style>
 <noscript>
 <style>
 .hero-art-portfolio{background-image: url('<$mt:BlogURL$>siteart/hero_<$mt:Var name="hero_art"$>.jpg');}@media screen and (max-width: 46.875em) {.hero-art-portfolio {background-image: url('<$mt:BlogURL$>siteart/sm_hero_<$mt:Var name="hero_art"$>.jpg');}}
@@ -85,11 +85,38 @@ portfolio</mt:if>
 <li><a href="#nav-start">Skip to navigation</a></li>
 <li><a href="#main">Skip to content</a></li>
 </ul>
+<mt:ignore>
 <$mt:Include module="inside_page_header"$>
-<div id="hero-image" class="hero-art-portfolio backgound-set hero-overlay filter-me" data-image="<$mt:Var name="hero_art"$>">
-</div>
-<div class="hero-art-portfolio-overlay">
+</mt:ignore>
+		<div id="inside-header" class="nav-fixed-bar">
+				<p class="nav-site-logo"><a href="">David Putney</a></p>
 
+	<ul id="nav-menu" class="nav-list">
+		<li><a href="">Design</a></li>
+		<li><a href="">Projects</a></li>
+		<li><a href="">About</a></li>
+		<li><a href="">Blog</a></li>
+	</ul>
+	<div id="menu-button" class="nav-menu-button">
+		<svg class="nav-menu-button-icn nav-menu-button-icn--open">
+			<use xlink:href="#chevron-up" />
+		</svg>
+		<a href="#footer-nav">MENU</a>
+		<svg class="nav-menu-button-icn nav-menu-button-icn--closed">
+			<use xlink:href="#chevron-down" />
+		</svg>
+		</span>
+	</div>
+	<div class="scroll-progress-wrapper">
+			<div id="scroll-progress" class="scroll-progress" style="width: 12%;"></div>
+		</div>
+</div>
+
+<div id="hero-image" class="hero-art-portfolio backgound-set  filter-me" data-image="<$mt:Var name="hero_art"$>">
+	<svg class="hero-art-curve">
+			<use xlink:href="#inside_page_mask" />
+		</svg>
+	</span>
 </div>
 
 <main id="main">
@@ -101,19 +128,19 @@ portfolio</mt:if>
 </mt:if>
 
 <mt:If name="page_category" eq="about">
-<$mt:Include module="about_module"$> 
+<$mt:Include module="about_module"$>
 </mt:if>
 
 <mt:If name="page_category" eq="Blog">
-<$mt:Include module="blog_module"$> 
-<$mt:Include module="footnote_return"$>  
+<$mt:Include module="blog_module"$>
+<$mt:Include module="footnote_return"$>
 </mt:if>
 
 <mt:If name="page_category" eq="Design">
 <div class="teaser-module-container">
 <mt:entries category="Design">
 <mt:If tag="EntryDataType" eq="header">
-<$mt:Include module="front_page_teaser"$> 
+<$mt:Include module="front_page_teaser"$>
 </mt:if>
 </mt:Entries>
 </div>
@@ -124,7 +151,7 @@ portfolio</mt:if>
 <div class="teaser-module-container">
 <mt:entries category="Projects">
 <mt:If tag="EntryDataType" eq="header">
-<$mt:Include module="front_page_teaser"$> 
+<$mt:Include module="front_page_teaser"$>
 </mt:if>
 </mt:Entries>
 </div>
