--- a/source/sass/blog_embedded_styles.scss
+++ b/source/sass/blog_embedded_styles.scss
@@ -4,7 +4,4 @@
 @import 'partials/variables';
 
 @import 'partials/common';
-@import 'partials/text_styles_preload';
-@import 'partials/site_header_preload';
-@import 'partials/inside_page_preload';
-@import 'partials/blog';
+@import 'partials/blog_preload';
