--- a/source/sass/styles.scss
+++ b/source/sass/styles.scss
@@ -5,12 +5,14 @@
 
 @import 'partials/text_styles';
 
+@import 'partials/animations';
 @import 'partials/footer';
 @import 'partials/index';
 @import 'partials/portfolio_page';
 @import 'partials/about';
 @import 'partials/blog';
+@import 'partials/blog_preload';
 @import 'partials/search_results';
-@import 'partials/icons'; 
-@import 'partials/404_page'; 
-@import 'partials/no_js'; 
+@import 'partials/icons';
+@import 'partials/404_page';
+@import 'partials/no_js';
